# arbitragefx

./: .gitignore  ARCHITECTURE.md  BACKTEST.md  BASELINE.md  BLUEPRINT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DATA_SCHEMA.md  DECISIONS.md  DEV_JOURNAL.md  ENGINEERING_REVIEW.md  EVIDENCE_LOG.md  HYPOTHESIS_LEDGER.md  PARAMETERS.md  PHASE1_EVENTS.md  PROMPT_HISTORY.md  README.md  TRIGGERS.md  epistemic_state.edn  hypothesis_ledger.edn  justfile
calibration-game/: deps.edn
data/: btc_15m.csv  btc_1h.csv  btc_1h_180d.csv  btc_1h_30d.csv  btc_2000.csv  btc_5m_30d.csv  btc_bear2_1h.csv  btc_binance.csv  btc_bull_1h.csv  btc_range_1h.csv  btc_real_1h.csv  btc_sim.csv  btcusdt_1h_20260219.csv  eth_5m.csv  hypothesis_ledger.json  sample.csv  sol_5m.csv
docs/: ARCHITECTURE_REASONING.md  ARCHITECTURE_SPECULATION.md  ASSESSMENT.md  CRITIQUE.md  DESIGN.md  DESIGN_V2.md  ISSUES.md  LOGGING.md  README.md  REFLECTIONS.md  REFLECTION_SESSION.md  RESEARCH.md  ROADMAP_672.md  ROADMAP_BACKTEST.md  ROADMAP_LOGGING.md  ROADMAP_NEXT_RELEASE.md  ROADMAP_OPS.md  SKELETON.md  SYSTEM_DESIGN.md  UI_ASSESSMENT.md  backtest-loops.md  backtest_fixes.md  baseline_backtests.md  dependency_tree.md  epistemic-strata.html  fee_model.md  hypothesis-space.md  latency_model.md  ledger-workflow.md  live_readiness.md  partial_fill_model.md  slippage_model.md  workbench.html
epistemic-dashboard/: deps.edn  shadow-cljs.edn
scripts/: build_csv_from_binance.py  daily-practice.sh  env_check.sh  epistemic_scan.clj  fetch_binance_data.sh  fetch_binance_klines.sh  fetch_data.sh  fetch_historical.sh  (+3 more)
(+99 files in other folders)
